Update README, update resume link + header details and add geico under experience

--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -73,6 +73,8 @@
             width: 100%;
             text-transform: uppercase;
             text-align: right;
+            align-items: center;
+            text-align: center;
         }
 
         .resume-link {
